--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.gson-2.8.9.jar}:\
     ${file.reference.lib-apache-poi-src-5.3.0-20240625}:\
-    ${file.reference.itextpdf-5.5.9.jar}
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
